--- a/css/styles.css
+++ b/css/styles.css
@@ -217,7 +217,6 @@ img {
   height: 600px;
   margin-left: auto;
   margin-right: auto;
-
   padding-top: 200px;
   padding-bottom: 200px;
 
@@ -233,6 +232,13 @@ img {
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
+}
+
+.hero-flex {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 .hero-title {
@@ -251,10 +257,12 @@ img {
 }
 
 /* Кнопка героя */
-.hero-button {
+.hero-footer-button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   min-width: 200px;
   min-height: 50px;
-  padding: 10px 32px;
 
   color: var(--primary-white-color);
   font-family: inherit;
@@ -271,8 +279,8 @@ img {
     background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.hero-button:hover,
-.hero-button:focus {
+.hero-footer-button:hover,
+.hero-footer-button:focus {
   background-color: var(--primary-white-color);
   color: var(--accent-color);
 }
@@ -651,6 +659,10 @@ img {
   color: var(--accent-color);
 }
 
+.footer-socials {
+  margin-right: 93px;
+}
+
 .footer-title {
   margin-bottom: 20px;
 
@@ -688,6 +700,38 @@ img {
 
 .footer-icon {
   fill: currentColor;
+}
+
+.footer-subscribe-field {
+  display: flex;
+}
+
+.footer-subscribe-input {
+  min-width: 358px;
+  height: 50px;
+  padding-left: 16px;
+  margin-right: 12px;
+
+  background-color: var(--footer-bcg-cl);
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+  border-radius: 4px;
+}
+
+.footer-subscribe-input::placeholder {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  font-size: 16px;
+  line-height: 1.25;
+  align-items: center;
+  letter-spacing: 0.03em;
+  color: rgba(255, 255, 255, 0.6);
+}
+
+.footer-subscribe-icon {
+  margin-left: 10px;
 }
 
 /* Модальное окно */
@@ -734,14 +778,173 @@ img {
   border-radius: 50%;
   background-color: transparent;
   border: 1px solid rgba(0, 0, 0, 0.1);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-close-btn:hover,
+.modal-close-btn:focus {
+  color: var(--accent-color);
+}
+
+.modal-close-icon {
+  fill: currentColor;
 }
 
 .is-hidden {
   opacity: 0;
-  visibility: hidden;
   pointer-events: none;
+  /* visibility: hidden; */
 }
 
 .backdrop.is-hidden .modal {
-  transform: translate(-50%, -50%) scale(0.8);
+  transform: translate(-50%, -50%) scale(1.2);
+}
+
+/* Контент модального окна */
+.modal-form {
+  padding-left: 40px;
+  padding-bottom: 40px;
+  padding-right: 40px;
+}
+
+.modal-data {
+  margin-bottom: 10px;
+}
+
+.modal-checkbox {
+  margin-top: 20px;
+  margin-bottom: 30px;
+}
+
+.modal-title {
+  margin-bottom: 12px;
+  padding-top: 40px;
+
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 1.15;
+  text-align: center;
+  letter-spacing: 0.03em;
+  color: var(--title-text-color);
+}
+
+.modal-label {
+  display: block;
+  margin-bottom: 4px;
+
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.01em;
+  color: var(--primary-text-color);
+}
+
+.modal-input {
+  width: 100%;
+  height: 40px;
+  padding-left: 42px;
+
+  outline: none;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-input:focus {
+  border-color: var(--accent-color);
+}
+
+.modal-input:focus + .input-icon {
+  fill: var(--accent-color);
+}
+
+.input-wrap {
+  position: relative;
+}
+
+.input-icon {
+  position: absolute;
+  left: 12px;
+  top: 50%;
+  transform: translateY(-50%);
+
+  color: var(--title-text-color);
+}
+
+.modal-text {
+  width: 100%;
+  min-height: 120px;
+  padding: 12px 16px;
+
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+  resize: none;
+}
+
+.check-text {
+  position: relative;
+  display: flex;
+
+  font-size: 14px;
+  color: var(--fourth-text-color);
+  align-items: center;
+  line-height: 1.71;
+  letter-spacing: 0.03em;
+  color: #757575;
+}
+
+.check-link {
+  color: var(--accent-color);
+  margin-left: 5px;
+}
+
+.check-text::before {
+  content: "";
+  width: 40px;
+  height: 22px;
+  border: 1px solid #999999;
+  border-radius: 50px;
+  margin-right: 5px;
+  transition: background-color 300ms linear;
+}
+.check-text::after {
+  content: "";
+  width: 18px;
+  height: 18px;
+  background-color: #c6cbe0;
+  position: absolute;
+  left: 3px;
+  top: 3px;
+  border-radius: 50%;
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.modal-check:checked + .check-text::after {
+  transform: translate(16px);
+  background-color: #ffffff;
+}
+.modal-check:checked + .check-text::before {
+  background-color: var(--accent-color);
+}
+
+.modal-submit {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-width: 200px;
+  min-height: 50px;
+  margin-right: auto;
+  margin-left: auto;
+
+  color: var(--primary-white-color);
+  font-family: inherit;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.87;
+  letter-spacing: 0.06em;
+  text-decoration: none;
+
+  background-color: var(--accent-color);
+  border-radius: 4px;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 }
